# CricBuzzScr

./: LICENSE  README.md  pyproject.toml  setup.py
CricBuzzScr/: __init__.py  match.py
